Added a coloumn in DDL

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                       <option>1</option>
                       <option>2</option>
                       <option>3</option>
+                      <option>4</option>
                     </select>
                   </div>
                   <span>0-11 yo</span></div>
